--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,11 @@ Author: Matthew Phelps
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
+Imports:data.table(>= 1.9.6),
+    shiny,
+    shinyWidgets,
+    shinythemes,
+    DT
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
