--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.2.0
 Author: Matthew Phelps
-Maintainer: The package maintainer <yourself@somewhere.net>
+Maintainer: Matthew Phelps <mphelps@hjerteforeningen.dk>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 Imports:data.table(>= 1.9.6),
@@ -11,7 +11,7 @@ Imports:data.table(>= 1.9.6),
     shinyWidgets,
     shinythemes,
     DT
-License: What license is it under?
+License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
