--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,6 @@
-Package: riskvisrr
-Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.2.0
+Title: CARS
 Author: Matthew Phelps
-Maintainer: Matthew Phelps <mphelps@hjerteforeningen.dk>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-Imports:data.table(>= 1.9.6),
-    shiny,
-    shinyWidgets,
-    shinythemes,
-    DT
-License: GPL (>= 3)
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 6.0.1
+License: GPL-3
+DisplayMode: showcase
+Tags: hf
+Type: Shiny
